Fixed :hover not working properly on mobile devices

--- a/components/ActorsShowcaser/styles/ActorCard.module.scss
+++ b/components/ActorsShowcaser/styles/ActorCard.module.scss
@@ -17,11 +17,6 @@ $ratio: 1.5;
   transition: 0.2s ease-in-out;
 }
 
-.actor__img-container:hover {
-  transform: scale(1.04);
-  cursor: pointer;
-}
-
 .actor__img-container:last-of-type {
   margin-right: 0;
 }
@@ -50,11 +45,6 @@ $ratio: 1.5;
   word-wrap: break-word;
 }
 
-.actor__fullname:hover {
-  cursor: pointer;
-  text-decoration: underline;
-}
-
 .actor__known-from {
   font-style: italic;
   padding: 0.4rem 1rem;
@@ -64,9 +54,19 @@ $ratio: 1.5;
   text-align: center;
 }
 
-.actor__known-from:hover {
-  cursor: pointer;
-  text-decoration: underline;
+@media (hover: hover) and (pointer: fine) {
+  .actor__known-from:hover {
+    cursor: pointer;
+    text-decoration: underline;
+  }
+  .actor__fullname:hover {
+    cursor: pointer;
+    text-decoration: underline;
+  }
+  .actor__img-container:hover {
+    transform: scale(1.04);
+    cursor: pointer;
+  }
 }
 
 @media screen and (max-width: 1450px) {
@@ -150,9 +150,8 @@ $ratio: 1.5;
   }
 }
 
-
 @media screen and (min-width: 2000px) {
-    .actor__container {
-      margin-right: 2rem;
-    }
+  .actor__container {
+    margin-right: 2rem;
   }
+}
