--- a/components/DetailsModal.tsx/styles/DetailsFooter.module.scss
+++ b/components/DetailsModal.tsx/styles/DetailsFooter.module.scss
@@ -29,9 +29,13 @@
     margin-right: 0;
   }
   
-  .modal-btn:hover {
-    padding-inline: 2.5rem;
-    cursor: pointer;
+  
+
+  @media (hover: hover) and (pointer: fine) {
+    .modal-btn:hover {
+      padding-inline: 2.5rem;
+      cursor: pointer;
+    }
   }
 
   @media screen and (max-width: 1100px) {
